# Analyst-copilot

./: .bandit  .ci-trigger  .env.example  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_CODE_REVIEW.md  DEPENDENCY_ALIGNMENT_SUMMARY.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PHASE0_FOUNDATION_SUMMARY.md  README.md  REPOSITORY_ANALYSIS_REPORT.md  ROADMAP.md  SECURITY.md  bandit-clean-test.json  bandit-final-clean.json  bandit-final-test.json  bandit-report-fixed.json  bandit-report.json  bandit-success.json  bandit-test-final.json  bandit-test-final2.json  bandit-test-report.json  bandit-with-exclude.json  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  env.example  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  tatus  test.db
acp-agents/: Dockerfile  README.md  requirements.txt  setup.py
acp-cli/: README.md  setup.py
acp-code-analyzer/: Dockerfile  README.md  requirements.txt  setup.py
acp-frontend/: index.html  package.json  vitest.config.js
acp-improvement/: requirements.txt  setup.py
acp-ingest/: .bandit  Dockerfile  README.md  alembic.ini  requirements.txt  setup.py
acp-shared-models/: pyproject.toml  setup.py
acp-shared-models/acp_shared_models/: __init__.py  auth.py  common.py  jobs.py  workflows.py
docs/: PRD.md  api-reference.md  architecture.md  ci-strategy.md  cli-reference.md  configuration.md  contributing.md  dependencies.md  deployment-pipeline.md  deployment.md  getting-started.md  index.md  infra.md  introduction.md  (+3 more)
(+144 files in other folders)
